Feature: Pages for project,project1, and project2

--- a/Project1.html
+++ b/Project1.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Project #1</title>
 </head>
 <body>
 <a href="About.html">About</a>
 <a href="Projects.html">Projects</a>
+    <p> Hello This is Project #1's page </p>
+
 </body>
 </html>
