--- a/Project2.html
+++ b/Project2.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Project #2</title>
 </head>
 <body>
 <a href="About.html">About</a>
 <a href="Projects.html">Projects</a>
+    <p> Hello This is Project #2's page </p>
 </body>
 </html>
