some minor changes

--- a/Projects.html
+++ b/Projects.html
@@ -5,7 +5,7 @@
     <title>Projects</title>
 </head>
 <body>
-<a href="index.html">Index Home</a>
+<a href="index.html"> Home</a>
 <a href="About.html">About</a>
     <p> Please select a project</p>
         <a href="Project1.html">proj. 1</a>
