--- a/About.html
+++ b/About.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<a href="index.html">Index Home</a>
+<a href="index.html"> Home</a>
 
 <p> Hello this is the about page</p>
 </body>
