--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Home</title>
 </head>
 <body>
-<h1>Hello Welcome to the Home Page</h1>
+<p>Hello Welcome to the Home Page</p>
 <a href="About.html">About</a>
 <a href="Projects.html">Projects</a>
 </body>
